# ShoppingAgent

./: .gitignore  README.md  ShoppingAgent.py  agent_output.txt  agent_output_20250610_190558.txt  app.py  basic_workflow.html  first log.txt  llm_log.json  llm_log.txt  main.py  main2.py  memory.yaml  mvp.py  output.ipynb  pyproject.toml  requirements.txt  shopping_agent.py  tempCodeRunnerFile.py  test.md  todo.md
notebooks/: mvp.ipynb
src/: GradioCallbackHandler.py  UIAgentSystem.py  agent_system.py  google_search.py  gradio_app.py  llm_client.py  main.py  prompts.py  prompts.yaml  search_urls.txt  tools.py
src/agents/: manager.py  product_hunter.py  prompts.yaml
src/llms/: gemini_2_flash.py
src/modules/: Link.py  Thought.py  llm.py
src/nodes/: ask_human.py  scraping_tool.py  searching_tool.py
src/nodes/agents/: evaluator.py  manager.py  product_hunter.py  prompts.yaml  researcher_agent.py
src/prompts/: sys.yaml
src/states/: MainState.py  ProductHunterState.py  ResearcherState.py
src/tools/: query_on_url.py  scraping_tool.py  searching_tool.py  visit_webpage.py  web_search.py
src/utils/: load_system_prompt.py
